<resources>
    <string name="app_name">ZodiacoChino</string>
    <string name="Titulo">¿Cuál horoscopo chino eres?</string>
    <string name="subtitulo">¡Ingresa los datos y descubrelo!</string>
    <string name="nombre">Nombre </string>
    <string name="date">dd/mm/aaaa </string>
    <string name="numeroC">Número de cuenta </string>
    <string name="email">Correo electrónico </string>
    <string name="boton">¡Listo! </string>
    <string name="Titulo2">Tu horóscopo chino es… </string>
    <string name="nombreF"> Te llamas </string>
    <string name="edad"> Tienes </string>
    <string name="NC"> Tu número de cuenta es </string>
    <string name="Correo">Tu correo es</string>
    <string name="title_activity_main2">Mi App</string>
    //Horoscopos chinos
    <string name="mono">Mono</string>
    <string name="cerdo">Cerdo</string>
    <string name="tigre">Tigre</string>
    <string name="rata">Rata</string>
    <string name="dragon">Dragon</string>
    <string name="perro">Perro</string>
    <string name="caballo">Caballo</string>
    <string name="conejo">Conejo</string>
    <string name="serpiente">Serpiente</string>
    <string name="buey">Buey</string>
    <string name="cabra">Cabra</string>
    <string name="gallo">Gallo</string>
    <string name="emmm">No se</string>
    //Errores
    <string name="eNombre">Nombre invalido</string>
    <string name="eNC">Numero de cuenta invalido</string>
    <string name="eCorreo">Correo invalido</string>
    <string name="eFecha">Fecha invalida</string>
</resources>